1fb4941 (HEAD, 7.x-1.x) Issue #2255597 by interdruper, alex-bukach: Make it work with jQuery 1.10 and above
26a853f (origin/HEAD, origin/7.x-1.x) Issue #2426307 by interdruper, Quty: Saving field with an ace format fails the first time
7542015 Issue #2426307 by interdruper, Quty: Saving field with an ace format fails the first time
7b9f1a5 Issue #2625650 by Infanty, interdruper: Fix PHP syntax highlighting: missing base_path in library source path.
ab41d17 Code styling: replacing tabs by spaces in all source files.
418888c Issue #2330383 by mkhamash,interdruper: Multi-site libraries path.
916e6ab Show all the installed themes in the theme list.
4780cf5 CHANGELOG.txt updated.
544afe2 Issue #414278 by interdruper: Display formatter that outputs the content in an ace editor: fixed minor issues, available options reviewed.
c1709d6 Using libraries_detect() for checking if Ace Library is properly installed.
64417be Added hook_libraries_info().
755ac3e Removing some commented code from ace_editor.drush.inc.
87f37e7 Added Drush command 'dl-ace' for easily download and install the Ace library (some fixes).
e381ca0 Added Drush command 'dl-ace' for easily download and install the Ace library.
7ef4102 README.txt: fixing typos.
c4316ed Do not create but just enable the 'Ace Editor' filter format if the format has been previously disabled.
b26df89 README.txt updated with instructions for removing Ace Editor filter format after unsintalling the module.
2fe66d4 Revert "Disable Ace Editor filter format if module is uninstalled." Content saved with 'Ace Editor' filter format will not be shown. This reverts commit 7cdc3cb8019f1ff8b74e8edc32913b031b61a02f.
7cdc3cb Disable Ace Editor filter format if module is uninstalled.
481049a Added hook_requirements() to provide a library status message on the Status Report.
b47c8fb Issue #2330383 by torotil: Multi-site libraries path.
9f50437 Issue #2468489 by torotil: Use drupal_html_id instead of custom code.