@@ -1,5 +1,6 @@
-1fb4941 (HEAD, 7.x-1.x) Issue #2255597 by interdruper, alex-bukach: Make it work with jQuery 1.10 and above
-26a853f (origin/HEAD, origin/7.x-1.x) Issue #2426307 by interdruper, Quty: Saving field with an ace format fails the first time
+cf2c7f7 (HEAD, tag: 7.x-1.2, 7.x-1.x) Revert "Issue #2255597 by interdruper, alex-bukach: Make it work with jQuery 1.10 and above"
+a020316 (origin/HEAD, origin/7.x-1.x) Issue #2255597 by interdruper, alex-bukach: Make it work with jQuery 1.10 and above
+26a853f Issue #2426307 by interdruper, Quty: Saving field with an ace format fails the first time
 7542015 Issue #2426307 by interdruper, Quty: Saving field with an ace format fails the first time
 7b9f1a5 Issue #2625650 by Infanty, interdruper: Fix PHP syntax highlighting: missing base_path in library source path.
 ab41d17 Code styling: replacing tabs by spaces in all source files.
